src/test/deca/context/invalid/created/test-a-17.deca
class A{
    protected int x;
    protected float y;
}

class B extends A{
    int z;
    int w;
    void SetX(){
        x = z;
    }
    void setY(int w){
        y = w;
    }
}

class C extends B{
    int z;
    protected int w;
    void setX(){
        x = z;
    }
    int setX(){
        return this.y;
    }
}
